--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,14 @@
     "start:server": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "google-auth-library": "^7.10.3",
     "mongodb": "^4.2.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
+    "spotify-web-api-node": "^5.0.2",
     "uuid": "^8.3.2"
   }
 }
